--- a/src/less/index.less
+++ b/src/less/index.less
@@ -1,23 +1,5 @@
-@primary-color: #027aff;
-@success-color: #19be6b;
-@warning-color: #ff9900;
-@error-color: #ed4014;
-@white-color: #ffffff;
-@gray-color: #efefef;
-
-@text-color: #000000;
-@text-sub-color: #00000073;
-@border-color: #d9d9d9;
-@disabled-color: #c5c8ce;
-@background-color: #f3f3f3;
-@background-sub-color: #eeeeee;
-@shadown-color: #cccccc;
-
-// 头部iconsize
-@headerIconFontSize: 22px;
-
-// 头部高度、底部功能按钮和icon的宽高大小是一致的
-@iconSize: 40px;
+// 引入变量定义
+@import "./variables.less";
 
 .icon {
   width: @iconSize;
@@ -99,4 +81,116 @@
   background-color: #dbdbdb;
   box-shadow: none;
   color: #b5b5b5;
+}
+
+// 常用样式类
+.app-show {
+  opacity: 1;
+  transition: opacity 0.2s;
+}
+
+.app-hide {
+  opacity: 0;
+  transition: opacity 0.2s;
+}
+
+.flex {
+  display: flex;
+}
+
+.flex-center {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.flex-between {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.flex-around {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+}
+
+.flex-start {
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+}
+
+.flex-end {
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+}
+
+.flex-column {
+  flex-direction: column;
+}
+
+.text-center {
+  text-align: center;
+}
+
+.text-left {
+  text-align: left;
+}
+
+.text-right {
+  text-align: right;
+}
+
+// 常用背景色类
+.bg-white {
+  background-color: @white-color;
+}
+
+.bg-primary {
+  background-color: @primary-color;
+}
+
+// 与动画相关的类
+.fade-enter-active, .fade-leave-active {
+  transition: opacity 0.3s;
+}
+
+.fade-enter, .fade-leave-to {
+  opacity: 0;
+}
+
+// 增加一些便于处理的工具类
+.cursor-pointer {
+  cursor: pointer;
+}
+
+.no-select {
+  user-select: none;
+}
+
+.overflow-hidden {
+  overflow: hidden;
+}
+
+.overflow-auto {
+  overflow: auto;
+}
+
+.position-relative {
+  position: relative;
+}
+
+.position-absolute {
+  position: absolute;
+}
+
+.full-width {
+  width: 100%;
+}
+
+.full-height {
+  height: 100%;
 }
