feat: 优化字体加载策略，调整页面内边距

--- a/public/font/iconfont.css
+++ b/public/font/iconfont.css
@@ -4,6 +4,7 @@
        url('iconfont.woff?t=1673061525635') format('woff'),
        url('iconfont.ttf?t=1673061525635') format('truetype'),
        url('iconfont.svg?t=1673061525635#iconfont') format('svg');
+  font-display: swap; /* 优化字体加载显示策略 */
 }
 
 .iconfont {
